# AI-Travel-Planner

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  build.sh  docker-compose.yml  nginx.conf  start-dev.sh
.kiro/specs/intelligent-travel-assistant/: tasks.md
backend/: db.sqlite3  pyproject.toml
backend/backend/: health.py  settings.py  urls.py
backend/travel_plans/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/travel_plans/migrations/: 0001_initial.py  0002_alter_travelplan_budget_alter_travelplan_destination_and_more.py  0003_remove_travelplan_budget_and_more.py  0004_travelplan_budget_limit_travelplan_currency_and_more.py  0005_alter_userapikey_service.py  0006_userapikey_base_url_userapikey_extra_config_and_more.py  0007_alter_userapikey_options_llmapikey_mapapikey_and_more.py  0008_rename_model_name_llmapikey_model_and_more.py  0009_update_map_api_key_model.py
backend/travel_plans/services/: api_key_service.py  budget_service.py  llm_service.py  map_service.py  voice_service.py
backend/users/: serializers.py  urls.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiKeyRequiredDialog.tsx  BudgetManager.tsx  CreateTravelPlan.tsx  ItineraryVisualization.tsx  LoadingScreen.tsx  MapToolbar.tsx  POIBrowser.tsx  RouteOptimizer.tsx  TravelMap.tsx  VoiceExpenseRecorder.tsx  VoiceRecorder.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useOptimizedApiKeys.ts
services/: llm_api.py
(+14 files in other folders)
